test_regress/t/t_udp_bad_line_outputs.out
%Error: t/t_udp_bad_line_outputs.v:9:11: syntax error, unexpected UDP table field, expecting : or UDP table line end
    9 |     ? : 0 0 : 0;   
      |           ^
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_udp_bad_line_outputs.v:15:15: syntax error, unexpected UDP table field, expecting UDP table line end
   15 |     ? : 0 : 0 0;   
      |               ^
%Error: Cannot continue
        ... This fatal error may be caused by the earlier error(s); resolve those first.
